0.85 30dec2021
* fixed shutdown - use is_alive instead of isAlive to keep python 3.9 happy
* eliminate stderr memory leak
* report failures on startup (rtl_433 still uses incorrect stdout/stderr)

0.84 19dec2021
* added 'model' field
* added option log_lines to assist in new sensor detection
* added config option to specify sensor_map for direct invocation

0.83 26oct2021
* fix hideki wind/rain identifiers
* fix bresser 6in1 indentation
* use introspection for packet listing - packet must have IDENTIFIER
* provide more feedback when listing recognized packet types
* update identifier and fields for Acurite 606TX

0.82 26oct2021
* huge thanks to andylittle for rolling up many changes while i was unavailable
* add LaCrosse TX18 sensor thanks to jmpacquet MR82
* added FOWH65BAltPacket thanks to jdormansteel MR84
* added support for OS BTHR918 thanks to billatq MR136
* added support for Bresser Professional Rain Gauge thanks to kroeckx MR122
* added support for Bresser 6in1 thanks to joewilliamsca MR107
* added support for LaCross BreezePro thanks to CazYokoyama MR102
* added support for Atlas Lightning Detector thanks to jrhelbert MR89
* update definition for Acurite00275RM thanks to Topslakr MR124
* update OSUVR128 packet identifier thanks to danimaciasperea MR130
* added support for wh24/wh25 variant thanks to sagu23 MR93
* added battery and more wind mappings for Bresser-5in1 thanks to millallo MR85
* update FOWH65B mappings thanks to vittorio88 MR92
* added PrologueTH thanks to stephen-hocking
* fixed battery indicator for OSBTHGN129 and recent rtl_433 thanks sbsrouteur
* support for latest rtl_433 hideki wind speeds

0.81 01jul2021
* add WH31L thanks to MksRasp #133

0.80 03mar2021
* add inFactory-TH temp humidity sensor thanks to gleven #117

0.79 15jan2021
* update LaCrosse-TX141THBv2 to the new style SDR. thanks to Mario St-Gelais
* update identifier for Acurite-986
* update Oregon-PCR800 to the new style SDR. thanks to luchmhor #94